2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix line numbering during `slc -EE' and later stages.

	A long standing bug would cause the compiler sync lines to become
	offset by 1 during the M4 processing. This would cause subsequent
	compiler / assembler error messages to designate wrong line
	numbers, and to produce invalid debugging information. This has
	been fixed.

	* tools/bin/cm4.in (wrepl): Shift line number by 1 before output.

	* doc/NEWS.txt: Announce the fix.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* configure.ac: use `$PWD' instead of `slc/' as name for the
	source tree when invoking `version-gen'.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow reusing the automated version numbering by other trees.

	* Makefile.am: Move Automake rules to manage `.version' to...
	* build-aux/version.mk: ...here.
	
	* build-aux/Makefile.am: Install `version-gen' and `version.mk' so
	they can be picked up by `sl-init-autoconf'.
	
	* build-aux/sl-init-autoconf: Copy `version-gen' and `version.mk'
	where appropriate

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* doc/NEWS.txt: Initialize for 2.2.x.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 2.2.
	
	* build-aux/package_version: Update to 2.2.
	
	* doc/NOTES.txt: Document recent changes. Split change
	documentation for 2.1.0a from 2.2. Cleanup text and fix typos.

	* doc/HACKING.txt: Fix typos. Require Autoconf 2.61, not 2.63.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Drop remaining `slh' files from library.

	* tools/include/fibre.slh,
	* tools/include/slr.slh,
	* tools/include/svp/lib.slh: Remove.

	* tools/Makefile.am (nobase_dist_pkgdata_DATA): Update
	accordingly.

	2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cleanup sources.

	* tools/bin/cce.in,
	* tools/bin/sag,
	* tools/bin/scu,
	* tools/bin/slr.in,